fix: make images full width on mobile devices

--- a/app/ui/SuperMarkdown.module.css
+++ b/app/ui/SuperMarkdown.module.css
@@ -30,6 +30,7 @@
 
   @media (max-width: 768px) {
     grid-template-columns: 1fr;
+    width: 100%;
   }
 }
 
